<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <TextView
                android:id="@+id/out_first_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <Button
                android:id="@+id/btn_read_first_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/read_row" />

            <Button
                android:id="@+id/btn_del_first_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/delete_row" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_go_2act1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_act1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_go_2act3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_actt2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>